// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match the snapshot 1`] = `
<App>
  <main
    className="app"
  >
    <div
      className="appMain"
    >
      <div
        className="appStage"
      >
        <Levels
          location="/bk/51337"
        >
          <div
            className="streetLevel"
          >
            <ForwardRef(SvgStreetLevel)
              className="streetLevelMap"
            >
              <svg
                className="streetLevelMap"
              >
                street-level.svg
              </svg>
            </ForwardRef(SvgStreetLevel)>
          </div>
          <div
            className="levels"
          >
            <LevelItem>
              <div
                className="levelItem"
              >
                <ForwardRef(SvgLevel1)>
                  <svg>
                    level-1.svg
                  </svg>
                </ForwardRef(SvgLevel1)>
              </div>
            </LevelItem>
            <LevelItem>
              <div
                className="levelItem"
              >
                <ForwardRef(SvgLevel2)>
                  <svg>
                    level-2.svg
                  </svg>
                </ForwardRef(SvgLevel2)>
              </div>
            </LevelItem>
          </div>
        </Levels>
      </div>
    </div>
    <Sidebar>
      <aside
        className="sidebar"
      >
        <Search>
          <div
            className="search"
          >
            <input
              className="searchInput"
              placeholder="Search..."
            />
            <button
              aria-label="Close Search"
              className="searchCloseBtn"
            >
              <ForwardRef(SvgClose)
                className="searchCloseBtnIcon"
              >
                <svg
                  className="searchCloseBtnIcon"
                >
                  close.svg
                </svg>
              </ForwardRef(SvgClose)>
            </button>
          </div>
        </Search>
      </aside>
    </Sidebar>
  </main>
</App>
`;

exports[`<App /> should match the snapshot 2`] = `
<App>
  <main
    className="app"
  >
    <div
      className="appMain"
    >
      <div
        className="appStage"
      >
        <Levels
          location="/bk"
        >
          <div
            className="streetLevel"
          >
            <ForwardRef(SvgStreetLevel)
              className="streetLevelMap"
            >
              <svg
                className="streetLevelMap"
              >
                street-level.svg
              </svg>
            </ForwardRef(SvgStreetLevel)>
          </div>
          <div
            className="levels"
          >
            <LevelItem>
              <div
                className="levelItem"
              >
                <ForwardRef(SvgLevel1)>
                  <svg>
                    level-1.svg
                  </svg>
                </ForwardRef(SvgLevel1)>
              </div>
            </LevelItem>
            <LevelItem>
              <div
                className="levelItem"
              >
                <ForwardRef(SvgLevel2)>
                  <svg>
                    level-2.svg
                  </svg>
                </ForwardRef(SvgLevel2)>
              </div>
            </LevelItem>
          </div>
        </Levels>
      </div>
    </div>
    <Sidebar>
      <aside
        className="sidebar"
      >
        <Search>
          <div
            className="search"
          >
            <input
              className="searchInput"
              placeholder="Search..."
            />
            <button
              aria-label="Close Search"
              className="searchCloseBtn"
            >
              <ForwardRef(SvgClose)
                className="searchCloseBtnIcon"
              >
                <svg
                  className="searchCloseBtnIcon"
                >
                  close.svg
                </svg>
              </ForwardRef(SvgClose)>
            </button>
          </div>
        </Search>
      </aside>
    </Sidebar>
  </main>
</App>
`;
